--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -7,12 +7,20 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                           | Property      | Color token       |
-| ------------------------------- | ------------- | ----------------- |
-| `.bx--tabs__nav-link`           | text color    | `$text-02`        |
-| `.bx--tabs__nav-item`           | border-bottom | `$ui-03`          |
-| `.bx--tabs__nav-link:selected`  | text color    | `$text-01`        |
-| `.bx--tabs__nav-item--selected` | border-bottom | `$interactive-04` |
+### Line tabs
+
+| State    | Element               | Property         | Color token                                    |
+| -------- | --------------------- | ---------------- | ---------------------------------------------- |
+| Enabled  | Background            | background-color | transparent                                    |
+|          | Label                 | text-color       | `$text-secondary`                              |
+|          | Icon                  | svg              | `$icon-secondary`                              |
+|          | Background            | border-bottom    | `$border-subtle`                               |
+|          | Scrollable icon       | svg              | `$icon-primary`                                |
+|          | Scrollable fade       | background-color | 8px, linear-gradient white to 100% transparent |
+|          | Scrollable background | background-color | `$background`                                  |
+| Selected | Label                 | text-color       | `$text-primary`                                |
+|          | Icon                  | svg              | `$icon-primary`                                |
+|          | Background            | border-bottom    | `$interactive`                                 |
 
 ### Interactive states
 
