feat: add StatusIndicator table component

--- a/src/pages/patterns/status-indicator-pattern/index.mdx
+++ b/src/pages/patterns/status-indicator-pattern/index.mdx
@@ -6,6 +6,8 @@ description:
   assess and identify status and respond accordingly.
 ---
 
+import StatusIndicatorTable from 'components/StatusIndicatorTable';
+
 <PageDescription>
 
 Status indicators are an important method of communicating severity level
@@ -78,7 +80,7 @@ an irregularity in the system, something malfunctioned, or a user needs to
 confirm a potentially destructive action. Some examples include alerts,
 exceptions, confirmations, and errors.
 
-{INSERT HIGH ATTENTION TABLE HERE}
+<StatusIndicatorTable attention="high" />
 
 ### Medium attention
 
