--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -142,8 +142,7 @@ such as modals, cards, or side panels.
 ## Formatting
 
 The tab component consists of two distinct zones: selected and unselected. There
-are always at least two tabs and one is selected by default. Icons are optional
-in contained tabs.
+are always at least two tabs and one is selected by default. Icons are optional.
 
 ### Anatomy of line tabs
 
@@ -237,7 +236,7 @@ With both line tabs and contained tabs, auto-width is the default behavior. Each
 tab will be a different size depending on the label's character count but will
 have have consistent padding on each side of the label. The first label,
 selected by default, should align to the grid. Where the tabs end will vary and
-may not end on the grid. If needed, you may also use a rule to help balance tabs
+may not end on the grid. If needed, you may also use a line to help balance tabs
 with other components on the page.
 
 <Row>
@@ -292,7 +291,7 @@ edge of the content area.
 </Column>
 </Row>
 
-<Caption>ALigning tabs within a component</Caption>
+<Caption>Aligning tabs within a component</Caption>
 
 ## Content
 
@@ -313,7 +312,7 @@ edge of the content area.
 ### Further guidance
 
 For further content guidance, see Carbon's
-[content guidelines](/guidelines/content/general).
+[content guidelines](/guidelines/content/overview).
 
 ## Behaviors
 
