--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -100,7 +100,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <Caption>Examples of selected and enabled contained tabs.</Caption>{' '}
 
-#### Interactive states
+#### Interactive states <br />
 
 | State          | Element               | Property         | Color token            |
 | -------------- | --------------------- | ---------------- | ---------------------- |
