--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -32,7 +32,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <Caption>Example of selected and enabled line tabs.</Caption>
 
+<br />
+
 #### Interactive states
+
+<br />
 
 | State          | Element               | Property         | Color token         |
 | -------------- | --------------------- | ---------------- | ------------------- |
@@ -100,7 +104,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <Caption>Examples of selected and enabled contained tabs.</Caption>{' '}
 
-#### Interactive states <br />
+<br />
+
+#### Interactive states
+
+<br />
 
 | State          | Element               | Property         | Color token            |
 | -------------- | --------------------- | ---------------- | ---------------------- |
