feat: add other attention yaml entries

--- a/src/pages/patterns/status-indicator-pattern/index.mdx
+++ b/src/pages/patterns/status-indicator-pattern/index.mdx
@@ -88,7 +88,7 @@ Use these indicators when no immediate user action is required or to provide
 feedback to a user action. Some examples include acknowledgements and progress
 indicators.
 
-{INSERT MEDIUM ATTENTION TABLE HERE}
+<StatusIndicatorTable attention="medium" />
 
 ### Low attention
 
@@ -97,7 +97,7 @@ signify that something has changed since the last interaction. Some examples
 include tooltip triggers that offer explanatory or added information, and
 passive notifications.
 
-{INSERT LOW ATTENTION TABLE HERE}
+<StatusIndicatorTable attention="low" />
 
 ## Ingredients
 
@@ -589,5 +589,5 @@ limitations. WCAG 2.1 success criterion 2.2.3 (AAA)
 ## Feedback
 
 Help us improve this pattern by providing feedback, asking questions, and
-leaving any other comments
-on [GitHub](https://github.com/carbon-design-system/carbon-website/issues/new?assignees=&labels=feedback&template=feedback.md).
+leaving any other comments on
+[GitHub](https://github.com/carbon-design-system/carbon-website/issues/new?assignees=&labels=feedback&template=feedback.md).
