--- a/src/pages/components/accordion/style.mdx
+++ b/src/pages/components/accordion/style.mdx
@@ -89,3 +89,14 @@ of the accordion panel.
 | > 640           | 25%          | –             |
 | 420-640px       | 64px / 4rem  | `$spacing-10` |
 | < 420           | 16px / 1rem  | `$spacing-05` |
+
+### Sizes
+
+| Element         | Size         | Height (px/rem) |
+| --------------- | ------------ | ------------ |
+| Header          | Small (sm)   | 32/2         |
+|                 | Medium (md)  | 40/2.5       |
+|                 | Large (lg)   | 48/3         |
+
+
+
