feat: add status and statusExtended paletts

--- a/src/pages/patterns/status-indicator-pattern/index.mdx
+++ b/src/pages/patterns/status-indicator-pattern/index.mdx
@@ -197,7 +197,7 @@ information and workflow progress. We’ve also included gray and purple to add
 more depth to the system. Gray indicates drafts or jobs that haven’t been
 started, and purple indicates outliers or undefined statuses.
 
-<ColorPalette type="alert" />
+<ColorPalette type="status" />
 
 #### Extended status palettes
 
@@ -207,7 +207,7 @@ the v2 color release (that is, it’s not in ASE, Sketch kit palettes, and so on
 because it’s for very selective use in data visualizations and certain status
 indicators. Do not use this palette in any other manner in your layouts.
 
-{Insert extended yellow and orange palette component}
+<ColorPalette type="status-indicators" shouldShowControls={false} />
 
 ## Variants
 
