fix: palette name

--- a/src/pages/patterns/status-indicator-pattern/index.mdx
+++ b/src/pages/patterns/status-indicator-pattern/index.mdx
@@ -207,7 +207,7 @@ the v2 color release (that is, it’s not in ASE, Sketch kit palettes, and so on
 because it’s for very selective use in data visualizations and certain status
 indicators. Do not use this palette in any other manner in your layouts.
 
-<ColorPalette type="status-indicators" shouldShowControls={false} />
+<ColorPalette type="status-extended" shouldShowControls={false} />
 
 ## Variants
 
