--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -62,12 +62,17 @@ plus the 16 px / 1rem on both sides of the text.
 
 | Class                       | Property                    | px / rem | Spacing token |
 | --------------------------- | --------------------------- | -------- | ------------- |
-| `.bx--content-switcher`     | height: default             | 40 / 2.5 | –             |
-| `.bx--content-switcher`     | height: small               | 32 / 2   | –             |
-| `.bx--content-switcher`     | height: large               | 48 / 3   | –             |
 | `.bx--content-switcher`     | corner radius               | 4px      | –             |
 | `:after`                    | divider                     | 1px      | –             |
 | `.bx--content-switcher-btn` | padding-left, padding-right | 16 / 1   | `$spacing-05` |
+
+### Sizes
+
+| Size        | Height px / rem | 
+| ------------|---------------- |
+| Small (sm)  | 32 / 2          | 
+| Medium (md) | 40 / 2.5        | 
+| Large (lg)  | 48 / 3          |
 
 <div className="image--fixed">
 
