feat: add glyph table

--- a/src/pages/patterns/status-indicator-pattern/index.mdx
+++ b/src/pages/patterns/status-indicator-pattern/index.mdx
@@ -373,7 +373,7 @@ you would use an outline is to ensure contrast accessibility for yellows.
 The table below is a first pass at establishing a standard lexicon for symbol
 indicators within IBM product.
 
-{INSERT SYMBOL STATUS TABLE HERE}
+<StatusIndicatorTable attention="glyph" />
 
 #### Type pairing and alignment
 
