--- a/src/pages/components/pagination/style.mdx
+++ b/src/pages/components/pagination/style.mdx
@@ -32,12 +32,18 @@ it's being paired with.
 
 | Class                               | Property                    | px / rem  | Spacing token |
 | ----------------------------------- | --------------------------- | --------- | ------------- |
-| `.bx--pagination`                   | height                      | 48 / 3    | –             |
 | `.bx--pagination`                   | border                      | 1px       | –             |
 | `.bx--pagination`                   | padding-left, padding-right | 16 / 1    | `$spacing-05` |
 | `.bx--pagination .bx--select-input` | padding-left, padding-right | 16 / 1    | `$spacing-05` |
 | `.bx--pagination__button`           | height, width               | 16 / 1    | –             |
 | `arrow`                             | icon size                   | 20 x 20px | –             |
+
+## Size
+
+| Size                               | Height(px/rem)              |
+| -----------------------------------| --------------------------- | 
+| Large (lg)                         | 48 / 3                      | 
+
 
 <div className="image--fixed">
 
