docs: v11 size token updates for search component
This PR updates the size tokens on the Style tab for the search component.

--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -62,11 +62,21 @@ content.
 
 | Class                                             | Property                    | px / rem | Spacing token |
 | ------------------------------------------------- | --------------------------- | -------- | ------------- |
-| `.bx--search--lg`                                 | height                      | 48 / 3   | –             |
-| `.bx--search--sm`                                 | height                      | 32 / 2   | –             |
 | `.bx--search-magnifier` <br/> `.bx--search-close` | height, width               | 16 / 1   | –             |
 | `.bx--search--lg`                                 | padding-left, padding-right | 48 / 3   | `$spacing-09` |
 | `.bx--search--sm`                                 | padding-left, padding-right | 32 / 2   | `$spacing-07` |
+
+## Size
+
+The width of the search field should appropriately fit the design and layout of
+content.
+
+| Class                                             | Height(px / rem)                    | 
+| ------------------------------------------------- | ----------------------------------- | 
+| Small (sm)                                        | 32 / 2                              |    
+| Large (lg)                                        | 48 / 3                              |
+| Extra large (xl)                                  | 64 / 4                              |
+
 
 <div className="image--fixed">
 
