--- a/src/pages/components/accordion/style.mdx
+++ b/src/pages/components/accordion/style.mdx
@@ -7,6 +7,15 @@ description:
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
+<AnchorLinks>
+
+<AnchorLink>Color</AnchorLink>
+<AnchorLink>Typography</AnchorLink>
+<AnchorLink>Structure</AnchorLink>
+<AnchorLink>Sizes</AnchorLink>
+
+</AnchorLinks>
+
 ## Color
 
 | Class                     | Property   | Color token      |
@@ -90,7 +99,7 @@ of the accordion panel.
 | 420-640px       | 64px / 4rem  | `$spacing-10` |
 | < 420           | 16px / 1rem  | `$spacing-05` |
 
-### Sizes
+## Sizes
 
 | Element         | Size         | Height (px/rem) |
 | --------------- | ------------ | ------------ |
