--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -66,7 +66,7 @@ plus the 16 px / 1rem on both sides of the text.
 | `:after`                    | divider                     | 1px      | –             |
 | `.bx--content-switcher-btn` | padding-left, padding-right | 16 / 1   | `$spacing-05` |
 
-### Sizes
+## Sizes
 
 | Size        | Height px / rem | 
 | ------------|---------------- |
