docs: v11 size token updates for Select component
This PR updates the size tokens on the Style tab for the Select component.

--- a/src/pages/components/select/style.mdx
+++ b/src/pages/components/select/style.mdx
@@ -75,7 +75,6 @@ and any proper nouns capitalized. Select text should be three words or less.
 
 | Class                     | Property                    | px / rem | Spacing token |
 | ------------------------- | --------------------------- | -------- | ------------- |
-| `.bx--select-input`       | height                      | 40 / 2.5 | –             |
 | `.bx--label`              | margin-bottom               | 8 / 0.5  | `$spacing-03` |
 | `.bx--select-input`       | padding-left                | 16 / 1   | `$spacing-05` |
 | `.bx--select__arrow`      | padding-left, padding-right | 16 / 1   | `$spacing-05` |
@@ -94,7 +93,6 @@ and any proper nouns capitalized. Select text should be three words or less.
 
 | Class                | Property                    | px / rem | Spacing token |
 | -------------------- | --------------------------- | -------- | ------------- |
-| `.bx--select-input`  | height                      | 32 / 2   | –             |
 | `.bx--select-input`  | padding-left                | 8 / 0.5  | `$spacing-03` |
 | `.bx--select__arrow` | padding-left, padding-right | 8 / 0.5  | `$spacing-03` |
 
@@ -113,16 +111,23 @@ and any proper nouns capitalized. Select text should be three words or less.
 
 | Class                | Property                    | px / rem | Spacing token |
 | -------------------- | --------------------------- | -------- | ------------- |
-| `.bx--select-input`  | height                      | 32 / 2   | –             |
 | `.bx--select-input`  | padding-left                | 8 / 0.5  | `$spacing-03` |
 | `.bx--select__arrow` | padding-left, padding-right | 8 / 0.5  | `$spacing-03` |
 
 <div className="image--fixed">
 
+  
 ![Structure and spacing measurements for Inline Select](images/select-style-6.png)
+  
 
 </div>
 
 <Caption>
   Structure and spacing measurements for inline select (focused) | px / rem
 </Caption>
+
+## Size
+| Element              | Size                        | Height (px / rem)  |
+| -------------------- | --------------------------- | ------------------ | 
+| Input                | Small (sm)                  | 32 / 2             | 
+|                      | Medium (md)                 | 40 / 2.5           |
