--- a/src/pages/components/UI-shell-header/style.mdx
+++ b/src/pages/components/UI-shell-header/style.mdx
@@ -13,24 +13,24 @@ options for the shell will be available in the future. All color used in the UI
 Shell is from the
 [IBM Design Language palette](https://www.ibm.com/design/language/elements/color#specifications)._
 
-| Class                       | Property         | Color value |
-| --------------------------- | ---------------- | ----------- |
-| `.bx--header`               | background color | Gray 100    |
-| `.bx--header`               | border-bottom    | Gray 80     |
-| `.bx--header__name`         | text color       | Gray 10     |
-| `.bx--header__menu-trigger` | fill             | Gray 10     |
-| `.bx--header__nav::before`  | border           | Gray 80     |
+| Element      | Property         | Color token      |
+| ------------ | ---------------- | ---------------- |
+| Header       | background color | `$background`    |
+|              | border-bottom    | `$border-subtle` |
+| Product name | text color       | `$text-primary ` |
 
 ![ui shell header](images/header-style-1.png)
 
-### Menu-trigger
+### Menu
 
-| Class                              | Property         | Color value    |
-| ---------------------------------- | ---------------- | -------------- |
-| `.bx--header__menu-trigger`        | fill             | Gray 10        |
-| `.bx--header__menu-trigger:hover`  | background color | Gray 100-hover |
-| `.bx--header__menu-trigger:focus`  | border           | White          |
-| `.bx--header__menu-trigger:active` | background color | Gray 80        |
+| Element | State   | Property         | Color token          |
+| ------- | ------- | ---------------- | -------------------- |
+| Menu    | Enabled | svg              | `$icon-primary`      |
+|         | Hover   | background color | `$background-hover`  |
+|         |         | svg              | `$icon-primary`      |
+|         | Focus   | border           | `$focus`             |
+|         | Active  | background color | `$background-active` |
+|         |         | svg              | `$icon-primary`      |
 
 <Row>
 <Column colLg={8}>
@@ -42,19 +42,16 @@ Shell is from the
 </Column>
 </Row>
 
-### Menu-item
+### Header link
 
-| Class                           | Property         | Color value    |
-| ------------------------------- | ---------------- | -------------- |
-| `.bx--header__menu-item`        | text color       | Gray 30        |
-| `.bx--header__menu-item`        | fill             | Gray 30        |
-| `.bx--header__menu-item:hover`  | background color | Gray 100-hover |
-| `.bx--header__menu-item:hover`  | text color       | Gray 10        |
-| `.bx--header__menu-item:hover`  | fill             | Gray 10        |
-| `.bx--header__menu-item:focus`  | border           | White          |
-| `.bx--header__menu-item:active` | background color | Gray 80        |
-| `.bx--header__menu-item:active` | text color       | Gray 10        |
-| `.bx--header__menu-item:active` | fill             | Gray 10        |
+| Element | State   | Property         | Color token          |
+| ------- | ------- | ---------------- | -------------------- |
+| Link    | Enabled | text color       | `$text-secondary`    |
+|         | Hover   | background color | `$background-hover`  |
+|         |         | text color       | `$text-primary`      |
+|         | Focus   | border           | `$focus`             |
+|         | Active  | background color | `$background-active` |
+|         |         | text color       | `$text-primary`      |
 
 <Row>
 <Column colLg={8}>
@@ -68,33 +65,49 @@ Shell is from the
 
 ### Sub-menu
 
-| Class                         | Property         | Color value   |
-| ----------------------------- | ---------------- | ------------- |
-| `.bx--header__submenu`        | background color | Gray 90       |
-| `.bx--header__submenu`        | text color       | Gray 30       |
-| `.bx--header__submenu:hover`  | background color | Gray 90-hover |
-| `.bx--header__submenu:hover`  | text color       | Gray 10       |
-| `.bx--header__submenu:focus`  | border           | White         |
-| `.bx--header__submenu:active` | background color | Gray 70       |
-| `.bx--header__submenu:active` | text color       | Gray 10       |
+| Element  | State    | Property         | Color token          |
+| -------- | -------- | ---------------- | -------------------- |
+| Sub-menu | Enabled  | background color | `$background`        |
+|          |          | text color       | `$text-secondary`    |
+|          |          | svg              | `$icon-secondary`    |
+|          | Hover    | background color | `$background-hover`  |
+|          |          | text color       | `$text-primary`      |
+|          |          | svg              | `$icon-primary`      |
+|          | Focus    | border           | `$focus`             |
+|          | Active   | background color | `$background-active` |
+|          |          | text color       | `$text-primary`      |
+|          |          | svg              | `$icon-primary`      |
+|          | Selected | background color | `$layer`             |
+|          |          | text color       | `$text-primary`      |
+|          |          | svg              | `$icon-primary`      |
+| Item     | Enabled  | background color | `$layer`             |
+|          |          | text color       | `$text-secondary`    |
+|          |          | svg              | `$icon-secondary`    |
+|          | Hover    | background color | `$layer-hover`       |
+|          |          | text color       | `$text-primary`      |
+|          |          | svg              | `$icon-primary`      |
+|          | Focus    | border           | `$focus`             |
+|          | Active   | background color | `$layer-active`      |
+|          |          | text color       | `$text-primary`      |
+|          |          | svg              | `$icon-primary`      |
 
 ![Sub-menu interactive states](images/header-style-7.png)
 
 <Caption></Caption>
 
-### Action
+### Header actions
 
-| Class                          | Property         | Color value    |
-| ------------------------------ | ---------------- | -------------- |
-| `.bx--header__action`          | fill             | Gray 10        |
-| `.bx--header__action:hover`    | background color | Gray 100-hover |
-| `.bx--header__action:hover`    | fill             | White          |
-| `.bx--header__action:focus`    | border           | White          |
-| `.bx--header__action:active`   | background color | Gray 80        |
-| `.bx--header__action:active`   | fill             | White          |
-| `.bx--header__action:selected` | background color | Gray 100       |
-| `.bx--header__action:selected` | border           | Gray 80        |
-| `.bx--header__action:selected` | fill             | White          |
+| Element | State    | Property         | Color token          |
+| ------- | -------- | ---------------- | -------------------- |
+| Action  | Enabled  | svg              | `$icon-secondary`    |
+|         | Hover    | background color | `$background-hover`  |
+|         |          | svg              | `$icon-primary`      |
+|         | Focus    | border           | `$focus`             |
+|         | Active   | background color | `$background-active` |
+|         |          | svg              | `$icon-primary`      |
+|         | Selected | background color | `$layer`             |
+|         |          | border           | `$border-subtle`     |
+|         |          | svg              | `$icon-primary`      |
 
 <Row>
 <Column colLg={8}>
@@ -110,28 +123,29 @@ Shell is from the
 
 Menu labels and text should be set in sentence case.
 
-| Class                       | Font-size (px/rem) | Font-weight    | Type token       |
-| --------------------------- | ------------------ | -------------- | ---------------- |
-| `.bx--header__name`         | 14 / 0.875         | SemiBold / 600 | `$heading-01`    |
-| `.bx--header__name--prefix` | 14 / 0.875         | Regular / 400  | `$body-short-01` |
-| `.bx--header__menu-item`    | 14 / 0.875         | Regular / 400  | `$body-short-01` |
+| Element        | Font-size (px/rem) | Font-weight    | Type token       |
+| -------------- | ------------------ | -------------- | ---------------- |
+| Product name   | 14 / 0.875         | SemiBold / 600 | `$heading-01`    |
+| Company prefix | 14 / 0.875         | Regular / 400  | `$body-short-01` |
+| Header link    | 14 / 0.875         | Regular / 400  | `$body-short-01` |
+| Sub-menu       | 14 / 0.875         | Regular / 400  | `$body-short-01` |
 
 ## Structure
 
 The header should span the full width of the browser window. The header can
 either stay sticky to the top of the browser or scroll away.
 
-| Class                       | Property                    | px/rem  | Spacing token |
-| --------------------------- | --------------------------- | ------- | ------------- |
-| `.bx--header`               | height                      | 48 / 3  | –             |
-| `.bx--header__menu-trigger` | height, width               | 48 / 3  | –             |
-| `.bx--header__name`         | padding-left                | 16 / 1  | `$spacing-05` |
-| `.bx--header__name`         | padding-right               | 32 / 2  | `$spacing-07` |
-| `.bx--header__nav`          | padding-left                | 16 / 1  | `$spacing-05` |
-| `.bx--header__menu-item`    | padding-left, padding right | 16 / 1  | `$spacing-05` |
-| `.bx--header__menu-arrow`   | padding-left                | 8 / 0.5 | `$spacing-03` |
-| `.bx--header__submenu`      | padding-left, padding right | 16 / 1  | `$spacing-05` |
-| `.bx--header__action`       | height, width               | 48 / 3  | –             |
+| Element       | Property                    | px/rem  | Spacing token |
+| ------------- | --------------------------- | ------- | ------------- |
+| Header        | height                      | 48 / 3  | –             |
+| Menu          | height, width               | 48 / 3  | –             |
+| Product name  | padding-left                | 16 / 1  | `$spacing-05` |
+|               | padding-right               | 32 / 2  | `$spacing-07` |
+| Link          | padding-left, padding right | 16 / 1  | `$spacing-05` |
+| Sub-menu      | padding-left, padding right | 16 / 1  | `$spacing-05` |
+| Chevron       | padding-left                | 8 / 0.5 | `$spacing-03` |
+| Sub-menu item | padding-left, padding right | 16 / 1  | `$spacing-05` |
+| Header action | height, width               | 48 / 3  | –             |
 
 ![ui shell header spec](images/header-style-2.png)
 
