update style text and tables

--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -120,12 +120,14 @@ Row sizes are customizable. The column header row should always match the row
 size of the table. Tall row heights are only recommended if your data is
 expected to have 2 lines of content in a single row.
 
-| Element | Property | Size    | px / rem |
-| ------- | -------- | ------- | -------- |
-| Row     | height   | Compact | 24 / 1.5 |
-|         | height   | Short   | 32 / 2   |
-|         | height   | Default | 48 / 3   |
-|         | height   | Tall    | 64 / 4   |
+| Size        | Height px / rem |
+| ----------- | --------------- |
+| Extra small | 24 / 1.5        |
+| Small       | 32 / 2          |
+| Medium      | 40 / 2.5        |
+| Large       | 48 / 3          |
+| Extra large | 64 / 4          |
+
 
 <Row>
 <Column colLg={8}>
@@ -161,8 +163,8 @@ batch actions, overall table menu, and/or table filter.
 
 ### Toolbar
 
-The default 48px toolbar is paired with the tall and default row sizes. The
-small toolbar is paired with the short and compact row sizes.
+The large 48px toolbar is paired with the extra large and large row sizes. The
+small toolbar is paired with the small and extra small row sizes.
 
 | Element        | Property                  | px / rem | Spacing token |
 | -------------- | ------------------------- | -------- | ------------- |
@@ -181,8 +183,8 @@ small toolbar is paired with the short and compact row sizes.
 
 ### Batch action bar
 
-The default 48px batch action bar is paired with the tall and default row sizes.
-The small batch action bar is paired with the short and compact row sizes.
+The large 48px batch action bar is paired with the extra large and large row sizes.
+The small batch action bar is paired with the small and extra small row sizes.
 
 | Element                 | Property                    | px / rem | Spacing token |
 | ----------------------- | --------------------------- | -------- | ------------- |
