--- a/src/pages/components/date-picker/style.mdx
+++ b/src/pages/components/date-picker/style.mdx
@@ -122,11 +122,11 @@ The widths of the date inputs may vary based on the grid and layout.
 
 ### Sizes
 
-| Element | Property | Size    | px / rem |
-| ------- | -------- | ------- | -------- |
-| Field   | height   | Small   | 32 / 2   |
-|         | height   | Default | 40 / 2.5 |
-|         | height   | Large   | 48 / 3   |
+| Element | Size    | Height px / rem |
+| ------- | ------- | --------------- |
+| Field   | Small   | 32 / 2          |
+|         | Medium  | 40 / 2.5        |
+|         | Large   | 48 / 3          |
 
 <div className="image--fixed">
 
