--- a/src/pages/components/date-picker/style.mdx
+++ b/src/pages/components/date-picker/style.mdx
@@ -122,11 +122,11 @@ The widths of the date inputs may vary based on the grid and layout.
 
 ### Sizes
 
-| Element | Size    | Height px / rem |
-| ------- | ------- | --------------- |
-| Field   | Small   | 32 / 2          |
-|         | Medium  | 40 / 2.5        |
-|         | Large   | 48 / 3          |
+| Element | Size        | Height px / rem |
+| ------- | ----------- | --------------- |
+| Field   | Small (sm)  | 32 / 2          |
+|         | Medium (md) | 40 / 2.5        |
+|         | Large (lg)  | 48 / 3          |
 
 <div className="image--fixed">
 
