--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -120,13 +120,13 @@ Row sizes are customizable. The column header row should always match the row
 size of the table. Tall row heights are only recommended if your data is
 expected to have 2 lines of content in a single row.
 
-| Size        | Height px / rem |
-| ----------- | --------------- |
-| Extra small | 24 / 1.5        |
-| Small       | 32 / 2          |
-| Medium      | 40 / 2.5        |
-| Large       | 48 / 3          |
-| Extra large | 64 / 4          |
+| Size             | Height px / rem |
+| ---------------- | --------------- |
+| Extra small (xs) | 24 / 1.5        |
+| Small (sm)       | 32 / 2          |
+| Medium (md)      | 40 / 2.5        |
+| Large (lg)       | 48 / 3          |
+| Extra large (xl) | 64 / 4          |
 
 
 <Row>
