--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -71,11 +71,11 @@ content.
 The width of the search field should appropriately fit the design and layout of
 content.
 
-| Class                                             | Height(px / rem)                    | 
+| Size                                              | Height (px / rem)                   | 
 | ------------------------------------------------- | ----------------------------------- | 
 | Small (sm)                                        | 32 / 2                              |    
+| Medium (md)                                       | 40 / 2.5                            |
 | Large (lg)                                        | 48 / 3                              |
-| Extra large (xl)                                  | 64 / 4                              |
 
 
 <div className="image--fixed">
