--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -154,14 +154,14 @@ various color differences for closed and open dropdowns.
 The field height and menu option height should always match. These sizes options
 can be applied to all variants of dropdown.
 
-| Element     | Property | Size    | px / rem |
-| ----------- | -------- | ------- | -------- |
-| Field       | height   | Small   | 32 / 2   |
-|             | height   | Default | 40 / 2.5 |
-|             | height   | Large   | 48 / 3   |
-| Menu option | height   | Small   | 32 / 2   |
-|             | height   | Default | 40 / 2.5 |
-|             | height   | Large   | 48 / 3   |
+| Element     | Size        | Height px / rem |
+| ----------- | ----------- | --------------- |
+| Field       | Small (sm)  | 32 / 2          |
+|             | Medium (md) | 40 / 2.5        |
+|             | Large (lg)  | 48 / 3          |
+| Menu option | Small (sm)  | 32 / 2          |
+|             | Medium (sm) | 40 / 2.5        |
+|             | Large (lg)  | 48 / 3          |
 
 <div className="image--fixed">
 
