--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -168,18 +168,31 @@ Tab label should be set in sentence case, and should not exceed three words.
 
 ### Line tabs
 
-| Element         | Property                    | px / rem | Spacing token |
-| --------------- | --------------------------- | -------- | ------------- |
-| Tab             | border-bottom               | 2px      | –             |
-| Label           | padding-left, padding-right | 16 / 1   | `$spacing-05` |
-|                 | padding-top, padding-bottom | 8 / 0.5  | `$spacing-03` |
-| Icon            | padding-right               | 16 / 1   | `$spacing-05` |
-|                 | padding-left                | 8 / 0.5  | `$spacing-03` |
-|                 | svg                         | 16 x 16  | —             |
-| Tab             | margin-left                 | 1px      | —             |
-| Icon-only       | svg                         | 16 x 16  | -             |
-|                 | svg                         | 20 x 20  | —             |
-| Scrollable icon | svg                         | 16 x 16  | -             |
+| Element         | Property                    | px / rem   | Spacing token |
+| --------------- | --------------------------- | ---------- | ------------- |
+| Tab             | height                      | 40 / 2.5   | –             |
+|                 | border-bottom               | 2px        | –             |
+|                 | width                       | auto-width | —             |
+|                 | margin-left                 | 1px        | —             |
+| Label           | padding-left, padding-right | 16 / 1     | `$spacing-05` |
+|                 | padding-top, padding-bottom | 8 / 0.5    | `$spacing-03` |
+| Icon            | padding-right               | 16 / 1     | `$spacing-05` |
+|                 | padding-left                | 8 / 0.5    | `$spacing-03` |
+|                 | svg                         | 16 x 16    | —             |
+| Scrollable icon | svg                         | 16 x 16    | -             |
+
+<br />
+
+#### Icon-only modifier
+
+<br />
+
+| Element  | Property      | px / rem | Spacing token |
+| -------- | ------------- | -------- | ------------- |
+| Tab (md) | height, width | 40 / 2.5 | –             |
+|          | svg           | 16 x 16  | –             |
+| Tab (lg) | height, width | 48 / 3   | —             |
+|          | svg           | 20 x 20  | —             |
 
 <Row>
 <Column colLg={8}>
@@ -193,17 +206,29 @@ Tab label should be set in sentence case, and should not exceed three words.
 
 ### Contained tabs
 
-| Element               | Property                    | px / rem | Spacing token |
-| --------------------- | --------------------------- | -------- | ------------- |
-| Tab                   | border-top                  | 2px      | –             |
-| Label                 | padding-left, padding-right | 16 / 1   | `$spacing-05` |
-| Icon                  | padding-right               | 16 / 1   | `$spacing-05` |
-|                       | padding-left                | 16 / 1   | `$spacing-05` |
-|                       | svg                         | 16 x 16  | —             |
-| Tab                   | border-right                | 1px      | —             |
-| Icon-only             | svg                         | 20 x 20  | -             |
-| Scrollable icon       | svg                         | 16 x 16  | —             |
-| Scrollable background | border-right, border-left   | 1px      | -             |
+| Element               | Property                    | px / rem         | Spacing token |
+| --------------------- | --------------------------- | ---------------- | ------------- |
+| Tab                   | height                      | 40 / 2.5         | –             |
+|                       | border-top                  | 2px              | –             |
+|                       | width                       | auto-width, grid | –             |
+| Label                 | padding-left, padding-right | 16 / 1           | `$spacing-05` |
+| Icon                  | padding-right               | 16 / 1           | `$spacing-05` |
+|                       | padding-left                | 16 / 1           | `$spacing-05` |
+|                       | svg                         | 16 x 16          | —             |
+| Tab                   | border-right                | 1px              | —             |
+| Scrollable icon       | svg                         | 16 x 16          | —             |
+| Scrollable background | border-right, border-left   | 1px              | -             |
+
+<br />
+
+#### Icon-only modifier
+
+<br />
+
+| Element  | Property      | px / rem | Spacing token |
+| -------- | ------------- | -------- | ------------- |
+| Tab (lg) | height, width | 48 / 3   | —             |
+|          | svg           | 20 x 20  | —             |
 
 <Row>
 <Column colLg={8}>
@@ -216,23 +241,3 @@ Tab label should be set in sentence case, and should not exceed three words.
 <Caption>
   Structure and spacing measurements for contained tabs | px / rem
 </Caption>
-
-## Sizes
-
-| Element                 | Property | Height (px / rem) |
-| ----------------------- | -------- | ----------------- |
-| Line tab                | Medium   | 40 / 2.5          |
-| Icon-only line tab      | Medium   | 40 / 2.5          |
-|                         | Large    | 48 / 3            |
-| Contained tab           | Large    | 48 / 3            |
-| Icon-only contained tab | Large    | 48 / 3            |
-
-<Row>
-<Column colLg={8}>
-
-![Tab sizes in px and rem](images/tab-style-9.png)
-
-</Column>
-</Row>
-
-<Caption>Tab sizes | px / rem</Caption>
