--- a/src/pages/components/modal/usage.mdx
+++ b/src/pages/components/modal/usage.mdx
@@ -243,9 +243,9 @@ of the modal.
 
 ### Sizing
 
-There are four responsive [modal sizes](/components/modal/style#sizes): **xs,
-small, default, large**. Choose a size that works best for the amount of modal
-content you have. Modals with short messages should use a xs or small modal to
+There are four responsive [modal sizes](/components/modal/style#sizes): extra small, 
+small, medium, and large. Choose a size that works best for the amount of modal
+content you have. Modals with short messages should use a extra small or small modal to
 avoid long single lines; for complex components, like data table the default or
 large modal will be more accommodating.
 
