--- a/src/pages/components/modal/style.mdx
+++ b/src/pages/components/modal/style.mdx
@@ -95,7 +95,7 @@ other components may still expand to the full width of a modal window.
 
 ## Sizes
 
-There are four modal sizes: **xs, small, default, large**. Each modal size has a
+There are four modal sizes: extra small, small, medium, and large. Each modal size has a
 responsive width that changes based on the browser size. As the browser
 decreases, the modal width percentage increases thus maintaining a proper ratio
 between the modal and browser. Modal widths are defined as percentages of the
@@ -109,7 +109,7 @@ browser but will still align to columns on the 2x grid.
 </Column>
 </Row>
 
-### XS
+### Extra small (xs)
 
 | Breakpoint | Percentage width | Column span | Margin-right |
 | ---------- | ---------------- | ----------- | ------------ |
@@ -119,7 +119,7 @@ browser but will still align to columns on the 2x grid.
 | 672        | 48%              | 4 of 8      | 16px / 1rem  |
 | 320        | 100%             | 4 of 4      | 16px / 1rem  |
 
-### Small
+### Small (sm)
 
 | Breakpoint | Percentage width | Column span | Margin-right |
 | ---------- | ---------------- | ----------- | ------------ |
@@ -129,7 +129,7 @@ browser but will still align to columns on the 2x grid.
 | 672        | 60%              | 5 of 8      | 16px / 1rem  |
 | 320        | 100%             | 4 of 4      | 16px / 1rem  |
 
-### Default
+### Medium (md)
 
 | Breakpoint | Percentage width | Column span | Margin-right |
 | ---------- | ---------------- | ----------- | ------------ |
@@ -139,7 +139,7 @@ browser but will still align to columns on the 2x grid.
 | 672        | 84%              | 7 of 8      | 20%          |
 | 320        | 100%             | 4 of 4      | 16px / 1rem  |
 
-### Large
+### Large (lg)
 
 | Breakpoint | Percentage width | Column span | Margin-right |
 | ---------- | ---------------- | ----------- | ------------ |
@@ -153,12 +153,12 @@ browser but will still align to columns on the 2x grid.
 
 Each modal size has a max height in order to maintain a proper window ratio.
 
-| Modal size  | Max-height |
-| ----------- | ---------- |
-| **XS**      | 48%        |
-| **Small**   | 72%        |
-| **Default** | 84%        |
-| **Large**   | 96%        |
+| Modal size       | Max-height |
+| ---------------- | ---------- |
+| Extra small (xs) | 48%        |
+| Small (sm)       | 72%        |
+| Medium (md)      | 84%        |
+| Large (lg)       | 96%        |
 
 <Row>
 <Column colLg={8}>
