--- a/src/pages/components/number-input/style.mdx
+++ b/src/pages/components/number-input/style.mdx
@@ -65,9 +65,7 @@ phrase and any proper nouns capitalized.
 
 ## Structure
 
-The height varies for small (32/2), medium (40/2.5), and large (48/3) size
-variants. The width varies based on content, layout, and design. The add and
-subtract icons can be found in the [icons](/guidelines/icons/library) library.
+The add and subtract icons can be found in the [icons](/guidelines/icons/library) library.
 
 | Class                              | Property                    | px / rem | Spacing token |
 | ---------------------------------- | --------------------------- | -------- | ------------- |
@@ -76,6 +74,16 @@ subtract icons can be found in the [icons](/guidelines/icons/library) library.
 | `.bx--number input[type='number']` | padding-left                | 16 / 1   | `$spacing-05` |
 | `.bx--number__controls`            | padding-left, padding-right | 16 / 1   | `$spacing-05` |
 | `.bx--number`                      | border-bottom               | 1px      | –             |
+
+## Sizes
+The height varies for each size variant and the the width varies based on content, layout, and design. 
+
+| Element | Size        | Height (px/rem) |
+| ------- | ----------- | --------------- |
+| Field   | Small (sm)  | 32 / 2          |
+|         | Medium (md) | 40 / 2.5        |
+|         | Large (lg)  | 48 / 3          |
+
 
 <div className="image--fixed">
 
