add size table to overflow menu style tab

--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -63,3 +63,14 @@ menu. The overflow menu icon can be found in the
 ![Structure and spacing measurements for an overflow menu](images/overflow-menu-style-3.png)
 
 </div>
+
+## Sizes
+
+| Element        | Size        | Height (px/rem) |
+| -------------- | ----------- | --------------- |
+| Menu options   | Small (sm)  | 32 / 2          |
+|                | Medium (md) | 40 / 2.5        |
+|                | Large (lg)  | 48 / 3          |
+| Icon button    | Small (sm)  | 32 / 2          |
+|                | Medium (md) | 40 / 2.5        |
+|                | Large (lg)  | 48 / 3          |
