Updated anchor links & images
separated structure images out and added anchor links

--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -5,6 +5,14 @@ description:
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
+<AnchorLinks>
+
+<AnchorLink>Color</AnchorLink>
+<AnchorLink>Typography</AnchorLink>
+<AnchorLink>Structure</AnchorLink>
+
+</AnchorLinks>
+
 ## Color
 
 ### Line tabs
@@ -181,6 +189,16 @@ Tab label should be set in sentence case, and should not exceed three words.
 |                 | svg                         | 16 x 16    | —             |
 | Scrollable icon | svg                         | 16 x 16    | -             |
 
+<Row>
+<Column colLg={8}>
+
+![Structure and spacing measurements for line tabs in px and rem](images/tab-style-7.png)
+
+</Column>
+</Row>
+
+<Caption>Structure and spacing measurements for line tabs | px / rem</Caption>
+
 <br />
 
 #### Icon-only modifier
@@ -197,12 +215,14 @@ Tab label should be set in sentence case, and should not exceed three words.
 <Row>
 <Column colLg={8}>
 
-![Structure and spacing measurements for line tabs in px and rem](images/tab-style-7.png)
+![Structure and spacing measurements for line tabs in px and rem](images/tab-style-7b.png)
 
 </Column>
 </Row>
 
-<Caption>Structure and spacing measurements for line tabs | px / rem</Caption>
+<Caption>
+  Structure and spacing measurements for icon-only line tabs | px / rem
+</Caption>
 
 ### Contained tabs
 
@@ -219,6 +239,18 @@ Tab label should be set in sentence case, and should not exceed three words.
 | Scrollable icon       | svg                         | 16 x 16          | —             |
 | Scrollable background | border-right, border-left   | 1px              | -             |
 
+<Row>
+<Column colLg={8}>
+
+![Structure and spacing measurements for line tabs in px and rem](images/tab-style-8.png)
+
+</Column>
+</Row>
+
+<Caption>
+  Structure and spacing measurements for contained tabs | px / rem
+</Caption>
+
 <br />
 
 #### Icon-only modifier
@@ -233,11 +265,11 @@ Tab label should be set in sentence case, and should not exceed three words.
 <Row>
 <Column colLg={8}>
 
-![Structure and spacing measurements for contained tabs in px and rem](images/tab-style-8.png)
+![Structure and spacing measurements for contained tabs in px and rem](images/tab-style-8b.png)
 
 </Column>
 </Row>
 
 <Caption>
-  Structure and spacing measurements for contained tabs | px / rem
+  Structure and spacing measurements for icon-only contained tabs | px / rem
 </Caption>
