--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -187,7 +187,7 @@ Tab label should be set in sentence case, and should not exceed three words.
 | Icon            | padding-right               | 16 / 1     | `$spacing-05` |
 |                 | padding-left                | 8 / 0.5    | `$spacing-03` |
 |                 | svg                         | 16 x 16    | —             |
-| Scrollable icon | svg                         | 16 x 16    | -             |
+| Scrollable icon | svg                         | 16 x 16    | —             |
 
 <Row>
 <Column colLg={8}>
@@ -237,7 +237,7 @@ Tab label should be set in sentence case, and should not exceed three words.
 |                       | svg                         | 16 x 16          | —             |
 | Tab                   | border-right                | 1px              | —             |
 | Scrollable icon       | svg                         | 16 x 16          | —             |
-| Scrollable background | border-right, border-left   | 1px              | -             |
+| Scrollable background | border-right, border-left   | 1px              | —             |
 
 <Row>
 <Column colLg={8}>
